name:                 conduit-cereal
version:              0.1.0.0
author:               Nick Spinale
maintainer:           Nick Spinale <nick@nickspinale.com>
license:              BSD3
license-file:         LICENSE
build-type:           Simple
cabal-version:        >=1.10

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall -fwarn-tabs -fno-warn-name-shadowing

  exposed-modules:    Data.Conduit.Serialize

  build-depends:      base >=4.8 && <5
                    , bytestring
                    , cereal
                    , conduit
                    , mono-traversable

test-suite tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     tests
  main-is:            Tests.hs

  build-depends:      base >=4.8 && <5
